[gd_scene load_steps=4 format=3 uid="uid://blqgknc71l1vc"]

[ext_resource type="Script" path="res://script/Menu.gd" id="1_vu7oi"]
[ext_resource type="Texture2D" uid="uid://gdso0bopub5l" path="res://image/menu_background.png" id="2_d4itf"]
[ext_resource type="AudioStream" uid="uid://cwyx14mvftve0" path="res://music/W_theme.ogg" id="3_srgkx"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vu7oi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d4itf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 189.0
offset_right = 692.0
offset_bottom = 854.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "Play"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_srgkx")
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
